#1 Replaces the deprecated Class.newInstance().
Class.newInstance() has been deprecated since Java 9, so
AnnotationProcessor now goes through getDeclaredConstructor(),
catching ReflectiveOperationException to cover the exceptions that
route adds.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>